# taskbot

./: .gitignore.save  .gitmodules  CMakeLists.txt  Makefile  TelegramBot.cpp
cmake/Modules/: FindTgBot.cmake
libs/boost/include/: boost
libs/boost/lib/: libboost_atomic-mt.dylib  libboost_charconv-mt.dylib  libboost_charconv.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  (+33 more)
libs/curl/lib/: libcurl.4.dylib
libs/curl/lib/pkgconfig/: libcurl.pc
libs/openssl/lib/: libssl.3.dylib
libs/openssl/lib/engines-3/: capi.dylib  loader_attic.dylib  padlock.dylib
libs/openssl/lib/ossl-modules/: legacy.dylib
libs/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
